remove dynamic runtime fields builder extension point